# kintime

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/commands/: redeploy.md  ship.md  start-milestone.md
.claude/skills/: ship.md
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_kin_table.py  0003_add_moments_table.py  0004_drop_moments_created_at.py  0005_drop_users_display_name.py  0006_cascade_delete_moments_on_kin.py  0007_add_kin_baseline_minutes.py
backend/app/: database.py  email.py  main.py  models.py  session.py
backend/app/routers/: auth.py  deps.py  health.py  kin.py  moments.py  users.py
backend/tests/: conftest.py  test_auth.py  test_balance.py  test_database.py  test_email.py  test_health.py  test_kin.py  test_migrations.py  test_moments.py  test_session.py  test_users.py
docs/: auth.md  cold-start.md  dns.md  local-dev.md
frontend/: middleware.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
frontend/app/: fetch-kin.ts  globals.css  layout.tsx  loading.tsx  page.test.tsx  page.tsx  user-chip.test.tsx  user-chip.tsx  wake-up-poller.tsx
frontend/app/auth/: actions.ts
frontend/app/balance/: balance-section.test.tsx  balance-section.tsx
frontend/app/kin/: actions.ts  kin-list.test.tsx  kin-list.tsx  kin-section-skeleton.tsx  kin-section.tsx  page.tsx
frontend/app/log/: custom-log-form.test.tsx  custom-log-form.tsx  page.tsx
frontend/app/login/: actions.ts  (+3 more)
(+9 files in other folders)
