[project]
name = "kintime-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "alembic>=1.13",
    "httpx2>=0.28",
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
